@@ -37,6 +37,13 @@
 (provide 'haskell-unicode-input-method)
 (require 'quail)
 
+;;;###autoload
+(defun turn-on-haskell-unicode-input-method ()
+  "Set input method `haskell-unicode'.
+See Info node `Unicode(haskell-mode)' for more details."
+  (interactive)
+  (set-input-method "haskell-unicode"))
+
 (quail-define-package
  "haskell-unicode" ;; name
  "UTF-8"           ;; language
